find a bug and squish it up and all day long you'll have good luck

--- a/web/source/css/profile-gallery.css
+++ b/web/source/css/profile-gallery.css
@@ -92,6 +92,7 @@
 				aspect-ratio: 4/3;
 				border: 0;
 				border-radius: 0;
+				background: $bg;
 			}
 		}
 
